[package]
name = "schraper"
version = "0.1.0"
authors = ["Kyure_A <github.com/Kyure-A>"]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
thirtyfour = "0.31.0"
selenium-manager = { git = "https://github.com/SeleniumHQ/selenium", branch = "trunk" }
tokio = { version = "1.28.2", features = ["full"] }
clap_derive = "3.0.0-beta.2"
dotenvy = "0.15.7"
